# mamapi

./: .gitignore  Dockerfile  README.md  mamapi.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: docker-release.yml
dev/: Dockerfile  compose.dev.yaml
