[project]
name = "mamapi"
requires-python = ">=3.13"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "B", "UP"]